@@ -1,4 +1,4 @@
-VERSION=1.2.1
+VERSION=1.2.3
 PYTHON=python
 
 help:
